# ccp-core

./: .gitignore  AGENTS.md  PRD.md  README.md  TASKS.md  fmag5smqngoibnvmibptbvtu8gpsd0v2  fmag5smqngoibnvmibptbvtu8gpsd0v2.records  fmag5smqngoibnvmibptbvtu8gpsd0v2.tail  manifest  profiles.md  pyproject.toml
.beads/: metadata.json
control/: README.md
control/change-requests/: CR-0001.json  CR-0002.json  CR-0003.json  CR-0004.json  CR-0005.json
control/decision-records/: DR-0001.json  DR-0002.json  DR-0003.json  DR-0004.json  DR-0005.json
control/evidence-packs/: EV-0001.json  EV-0002.json  EV-0003.json
control/execution-plans/: EP-0001.json
docs/: ARCHITECTURE.md  CCP_NORMATIVE_SPEC_V0.1.md  FOUNDRY_BOUNDARY.md
docs/consultation/: CCP_PUBLIC_CONSULTATION_DRAFT.md
examples/: CR-0001.json  DR-0001.json  EP-0001.json  EV-0001.json
fixtures/: README.md
fixtures/negative/schema/: CR-3001.json  CR-3002.json  DR-3001.json  EP-3001.json  EV-3001.json
fixtures/negative/semantic/: CR-4001.json  DR-4001.json  EP-4001.json  EP-4002.json  EV-4001.json
fixtures/positive/linked/: CR-2001.json  DR-2001.json  EP-2001.json  EV-2001.json
policy/: evidence.md  review.md
protocol/: version.json
schemas/: change-request.schema.json  decision-record.schema.json  evidence-pack.schema.json  execution-plan.schema.json
src/ccp_cli/: __init__.py  main.py
templates/control-plane/: AGENTS.md  README.md
tests/: test_cli_contract.py  test_dogfood_control_plane.py  test_examples_validate.py  test_schema_constraints.py  test_transitions.py
(+4 files in other folders)
