[project]
name = "ccp-cli"
version = "0.1.0a0"
description = "Reference CLI for the Change Contract Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "jsonschema>=4.23",
  "rich>=13.7",
]

[project.scripts]
ccp = "ccp_cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ccp_cli = ["data/*.json"]
